overflow-x hidden bug on menu

--- a/src/css/story/jordan.styl
+++ b/src/css/story/jordan.styl
@@ -1,4 +1,7 @@
 /* CUSTOM STORY STYLE */
+body
+	overflow-x hidden
+	
 #content
 	position relative
 	margin-top -11rem
